@@ -30,6 +30,8 @@ If source jars for dependencies are available on the repositories, they are down
 
 - One can succesfully Open menu:Window[Preferences > General > Appearance] whereas an error occured previously. Fixes Issue #646. Thank you Andrea Richiardi for filing the Issue and finding the relevant resources which helped me to fix it quickly!)
 
+- Fixed race conditions during Eclipse startup between CCW and the JDT indirectly starting the DebugUIPlugin while the workbench has not been created yet (why the stack towards getting a JDT classpath check leads to trying to start the DebugUIPlugin in Eclipse is an exercise left to the reader). Fix Issue #651
+
 == Changes between Counterclockwise 0.25.2 and 0.26.0
 
 `0.26.0` released on July 10, 2014
